<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimension_20"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/texto_pet"
        android:textAllCaps="true"
        android:textSize="@dimen/dimension_text_16" />

    <ImageView
        android:layout_width="@dimen/dimension_200"
        android:layout_height="@dimen/dimension_200"
        android:layout_gravity="center"
        android:contentDescription="@string/description_imagem"
        android:src="@drawable/meu_pet" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/nome_do_pet"
        android:layout_marginTop="@dimen/dimension_text_15"
        android:layout_marginStart="@dimen/dimension_20"
        android:layout_marginBottom="@dimen/dimension_20"
        android:textSize="@dimen/dimension_text_12" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/raca_pet"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/dimension_20"
        android:layout_marginBottom="@dimen/dimension_20"
        android:textSize="@dimen/dimension_text_12" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idade_pet"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/dimension_20"
        android:layout_marginBottom="@dimen/dimension_20"
        android:textSize="@dimen/dimension_text_12" />

    <Button
        android:backgroundTint="@color/button_color"
        android:textSize="@dimen/dimension_text_14"
        android:id="@+id/button_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/dimension_70"
        android:layout_marginEnd="@dimen/dimension_70"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/mensagem"
        android:textAllCaps="true" />


</LinearLayout>